[gd_scene load_steps=12 format=3 uid="uid://dsprud7eke4hw"]

[ext_resource type="Script" uid="uid://bd8c0yj7jndi" path="res://scripts/UI/ui.gd" id="1_kh8tx"]
[ext_resource type="Shader" uid="uid://bqbapyij77dl4" path="res://shaders/crt.gdshader" id="2_daqmn"]
[ext_resource type="Texture2D" uid="uid://bada7xnuy0ybl" path="res://sprites/concept.png" id="2_wj31q"]
[ext_resource type="PackedScene" uid="uid://dtgfu0y8okygv" path="res://prefabs/UI/itemSlot.tscn" id="3_vcb6d"]
[ext_resource type="Resource" uid="uid://b3vwmh5wv5ylh" path="res://premadeResources/weapons/pistol.tres" id="4_yqnw1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hteqg"]
atlas = ExtResource("2_wj31q")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcb6d"]
atlas = ExtResource("2_wj31q")
region = Rect2(256, 0, 32, 32)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wj31q"]
shader = ExtResource("2_daqmn")
shader_parameter/crt_brightness = 2.0
shader_parameter/crt_ghost = 0.0
shader_parameter/crt_grid = 0.348
shader_parameter/crt_white_noise = 0.0
shader_parameter/crt_curve = 0.01

[sub_resource type="Animation" id="Animation_wj31q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("gameOverLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, -93)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("retryButton:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(585, 769)]
}

[sub_resource type="Animation" id="Animation_daqmn"]
resource_name = "gameOver"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("gameOverLabel:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(10, -93), Vector2(10, 238)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("retryButton:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(585, 769), Vector2(585, 401)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hteqg"]
_data = {
&"RESET": SubResource("Animation_wj31q"),
&"gameOver": SubResource("Animation_daqmn")
}

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_kh8tx")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2

[node name="settings" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
focus_mode = 0
text = "Settings"

[node name="settings" type="PanelContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/settings"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/settings/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MarginContainer/settings/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="music" type="HBoxContainer" parent="MarginContainer/settings/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/settings/MarginContainer/VBoxContainer/music"]
custom_minimum_size = Vector2(130, 40)
layout_mode = 2
text = "Music"
vertical_alignment = 2

[node name="musicSlider" type="HSlider" parent="MarginContainer/settings/MarginContainer/VBoxContainer/music"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="music" type="Label" parent="MarginContainer/settings/MarginContainer/VBoxContainer/music"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 40)
layout_mode = 2
text = "100%"
horizontal_alignment = 2
vertical_alignment = 2

[node name="sound" type="HBoxContainer" parent="MarginContainer/settings/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/settings/MarginContainer/VBoxContainer/sound"]
custom_minimum_size = Vector2(130, 40)
layout_mode = 2
text = "Sounds"
vertical_alignment = 2

[node name="sfxSlider" type="HSlider" parent="MarginContainer/settings/MarginContainer/VBoxContainer/sound"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="sfx" type="Label" parent="MarginContainer/settings/MarginContainer/VBoxContainer/sound"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 40)
layout_mode = 2
text = "100%"
horizontal_alignment = 2
vertical_alignment = 2

[node name="language" type="HBoxContainer" parent="MarginContainer/settings/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/settings/MarginContainer/VBoxContainer/language"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "Language"

[node name="previousLanguage" type="Button" parent="MarginContainer/settings/MarginContainer/VBoxContainer/language"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "<"

[node name="languageTitle" type="Label" parent="MarginContainer/settings/MarginContainer/VBoxContainer/language"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "english"
horizontal_alignment = 1

[node name="nextLanguage" type="Button" parent="MarginContainer/settings/MarginContainer/VBoxContainer/language"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = ">"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/settings/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/settings/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "CRT"

[node name="crt" type="CheckBox" parent="MarginContainer/settings/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="closeSettings" type="Button" parent="MarginContainer/settings/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
focus_mode = 0
text = "close"

[node name="playerStats" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/playerStats"]
layout_mode = 2

[node name="playerIcon" type="TextureRect" parent="MarginContainer/playerStats/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_hteqg")
stretch_mode = 5

[node name="hpIcon" type="TextureRect" parent="MarginContainer/playerStats/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_vcb6d")

[node name="hp" type="Label" parent="MarginContainer/playerStats/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "10"

[node name="inventory" type="HBoxContainer" parent="MarginContainer/playerStats/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="itemSlot" parent="MarginContainer/playerStats/HBoxContainer/inventory" instance=ExtResource("3_vcb6d")]
layout_mode = 2
item = ExtResource("4_yqnw1")

[node name="gameOverLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = -93.0
offset_right = 1270.0
offset_bottom = -29.0
theme_override_colors/font_color = Color(0.819608, 0.266667, 0.266667, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "Game Over!"
horizontal_alignment = 1

[node name="crt" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_wj31q")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="retryButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 409.0
offset_right = 55.0
offset_bottom = 465.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 48
text = "retry"

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hteqg")
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="value_changed" from="MarginContainer/settings/MarginContainer/VBoxContainer/music/musicSlider" to="." method="updateSettings"]
[connection signal="value_changed" from="MarginContainer/settings/MarginContainer/VBoxContainer/sound/sfxSlider" to="." method="updateSettings"]
[connection signal="pressed" from="MarginContainer/settings/MarginContainer/VBoxContainer/language/previousLanguage" to="." method="_on_previous_language_pressed"]
[connection signal="pressed" from="MarginContainer/settings/MarginContainer/VBoxContainer/language/nextLanguage" to="." method="_on_next_language_pressed"]
[connection signal="toggled" from="MarginContainer/settings/MarginContainer/VBoxContainer/HBoxContainer/crt" to="." method="updateSettings"]
[connection signal="pressed" from="MarginContainer/settings/MarginContainer/closeSettings" to="." method="_on_close_settings_pressed"]
[connection signal="pressed" from="retryButton" to="." method="_on_retry_button_pressed"]
